# photoprint

./: .gitignore  .gitmodules  .pp_pageextent.cpp.swp  ChangeLog  ChangeLog~  Makefile  Makefile.am  Makefile.am~  Makefile.in  Makefile.in~  Makefile~  NEWS  NEWS~  README  TODO  TODO~  aclocal.m4  autogen.sh  carouselcheck.cpp  cmtransformworker.h  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  configure.ac~  dialogs.cpp  dialogs.cpp~  dialogs.h  fotoprint.desktop  gp_cppsupport  gprintersettings.cpp  gprintersettings.h  histogram.cpp  histogram.h  imagesource  imagesource_segmentmask.cpp  imagesource_segmentmask.h  imageutils  (+130 more)
.deps/: dialogs.Po  gprintersettings.Po  layout.Po  layout_carousel.Po  layout_imageinfo.Po  layout_nup.Po  layout_poster.Po  layout_single.Po  photoprint.Po  photoprint_state.Po  pp_cms.Po  pp_imagecontrol.Po  pp_imageinfo.Po  pp_layout_carousel.Po  pp_layout_carousel_pageview.Po  pp_layout_nup.Po  pp_layout_nup_pageview.Po  pp_layout_poster.Po  pp_layout_poster_pageview.Po  pp_layout_single.Po  pp_layout_single_pageview.Po  pp_mainwindow.Po  pp_menu_edit.Po  pp_menu_file.Po  pp_menu_help.Po  pp_menu_image.Po  pp_menu_layout.Po  pp_menu_options.Po  pp_pageextent.Po  pp_printoutput.Po  pp_scaling.Po  pp_sigcontrol.Po  pp_units.Po  print.Po  printerqueueswrapper.Po  printoutput.Po  util.Po
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
bak/: pp_menu.cpp  pp_menu.h
borders/: Flaky.tif  GentleRipple.tif  HeartsLandscape.tif  HeartsPortrait.tif  Makefile.am  Makefile.in  SoftRectangle.tif  Sponged.tif  Vignette.tif  licence.txt
effects/: GammaIcon.xcf  Makefile.am  Makefile.am~  Makefile.in  SPECS  dialogcheck.cpp  dialogcheck.cpp~  effectlist.bak  effectlist.cpp  effectlist.cpp~  effectlist.h  effects_dialog.cpp  effects_dialog.cpp~  effects_dialog.h  effectselector.cpp  effectselector.cpp~  effectselector.h  effectwidget_channelmask.cpp  effectwidget_channelmask.h  effectwidget_gamma.cpp  effectwidget_gamma.h  effectwidget_tempchange.cpp  effectwidget_tempchange.cpp~  effectwidget_tempchange.h  effectwidget_unsharpmask.cpp  effectwidget_unsharpmask.cpp~  effectwidget_unsharpmask.h  out.tif  out1.tif  out2.tif  ppeffect.cpp  ppeffect.cpp~  ppeffect.h  ppeffect.h~  ppeffect_channelmask.cpp  ppeffect_channelmask.h  ppeffect_desaturate.cpp  ppeffect_desaturate.cpp~  ppeffect_desaturate.h  ppeffect_desaturate.h~  (+23 more)
effects/gfx/: DesaturateIcon.xcf  DesaturateIcon2.xcf  TemperatureIcon.xcf  TemperatureIcon2.xcf  UnsharpMaskIcon.xcf
imagesource/: DOWNSAMPLE  DOWNSAMPLE~  Makefile.am  Makefile.am~  Makefile.in  a.out  composite.cpp  composite.cpp~  convkernel.h  convkernel_gaussian.h  convkernel_gaussian_1D.h  convkernel_unsharpmask.h  dstest.cpp  dstest.cpp~  gaussiantest.cpp  iccjpeg.cpp  iccjpeg.h  imagesource.cpp  imagesource.cpp~  imagesource.h  imagesource_bilinear.bak  imagesource_bilinear.cpp  imagesource_bilinear.cpp~  imagesource_bilinear.h  imagesource_bilinear.h.bak  imagesource_bilinear.h~  imagesource_bmp.cpp  imagesource_bmp.cpp~  imagesource_bmp.h  imagesource_cms.cpp  imagesource_cms.h  imagesource_cms.h~  imagesource_convolution.cpp  imagesource_convolution.h  imagesource_crop.cpp  imagesource_crop.cpp~  imagesource_crop.h  imagesource_desaturate.cpp  imagesource_desaturate.h  imagesource_dither.cpp  (+73 more)
pixbufthumbnail/: Makefile.am  Makefile.in  egg-pixbuf-thumbnail.c  eggmd5.c  eggmd5.h
po/: ChangeLog  ChangeLog~  LINGUAS  Makefile  Makefile.in  Makevars  POTFILES  POTFILES.in  POTFILES.in~  cs.gmo  cs.po  cs_CZ.gmo  cs_CZ.po  da.gmo  da.po  de.po  es.gmo  es.po  fr.gmo  fr.po  fr.po~  it.po  nl.po  photoprint.pot  pl.gmo  pl.mo  pl.po  pt.gmo  pt.po  pt_BR.gmo  pt_BR.po  ru.gmo  ru.po  ru.po~
profilemanager/: Makefile.am  Makefile.am~  Makefile.in  dummygrey.icm  dummyrgb.icm  intentselector.cpp  intentselector.h  lab.icc  lcmswrapper.cpp  lcmswrapper.cpp~  lcmswrapper.h  lcmswrapper.h~  md5.cpp  md5.cpp~  md5.h  md5.h~  mkgreyprofile.cpp  mklabprofile.cpp  mklabprofile.cpp~  mkrgbprofile.cpp  mkrgbprofile.cpp~  profilemanager.cpp  profilemanager.h  profilemanager.h~  profileselector.bak  profileselector.cpp  profileselector.cpp~  profileselector.experimental  profileselector.h  profileselector.h~  test.cpp  test.cpp~  test.icm  test.out  uitest.cpp  uitest.cpp~
redundant/: pp_menu.cpp
shortcuts/: A4-10x8-1up.preset  A4-7x5-2up.preset  A4-8x6-1up.preset  A4Profiling.preset  Letter-10x8-1up.preset  Letter-7x5-2up.preset  Letter-8x6-1up.preset  LetterProfiling.preset  Makefile.am
splashscreen/: Makefile  Makefile.am  Makefile.in  SplashScreen.tif  splashscreen.cpp  splashscreen.h  splashscreendata.cpp
splashscreen/.deps/: splashscreen.Plo
stp_support/: Makefile  Makefile.am  Makefile.in  printerqueues.c  printerqueues.h  printerqueues_unix.c  printerqueues_win32.c  test.c  test.prn
stp_support/.deps/: printerqueues.Plo  test.Po
stpui_widgets/: Makefile  Makefile.am  Makefile.in  activetest.cpp  dimension.c  dimension.h  stpui_combo.c  stpui_combo.h  stpui_file.c  stpui_file.h  stpui_optionbook.c  stpui_optionbook.h  stpui_optionbook.h~  stpui_optionpage.c  stpui_optionpage.h  stpui_printerselector.c  stpui_printerselector.h  stpui_queue.c  stpui_queue.h  stpui_slider.c  stpui_slider.c~  stpui_slider.h  stpui_toggle.c  stpui_toggle.h  stputil.c  stputil.h  test.cpp  units.h
stpui_widgets/.deps/: activetest.Po  dimension.Plo  stpui_combo.Plo  stpui_file.Plo  stpui_optionbook.Plo  stpui_optionpage.Plo  stpui_printerselector.Plo  stpui_queue.Plo  stpui_slider.Plo  stpui_toggle.Plo  stputil.Plo  test.Po
support/: Makefile.am  Makefile.am~  Makefile.in  circlemontage.cpp  circlemontage.h  configdb.cpp  configdb.h  consumer.cpp  consumer.h  generaldialogs.cpp  generaldialogs.cpp~  generaldialogs.h  imageselector.cpp  imageselector.cpp~  imageselector.h  imageselector_noborder_image.h  jpegcheck.cpp  jpegcheck.cpp~  jpegsave.cpp  jpegsave.cpp~  jpegsave.h  jpegsave.h~  layoutrectangle.cpp  layoutrectangle.h  maskpixbuf.cpp  maskpixbuf.cpp~  maskpixbuf.h  maskpixbuf.h~  pageextent.h  (+58 more)
