## Process this file with automake to produce Makefile.in

bordersdir = $(datadir)/photoprint/borders

borders_DATA = \
	licence.txt \
	Flaky.tif         HeartsLandscape.tif  SoftRectangle.tif  Vignette.tif \
	GentleRipple.tif  HeartsPortrait.tif   Sponged.tif

EXTRA_DIST = \
	licence.txt \
	Flaky.tif         HeartsLandscape.tif  SoftRectangle.tif  Vignette.tif \
	GentleRipple.tif  HeartsPortrait.tif   Sponged.tif
