## Process this file with automake to produce Makefile.in

sizeshortcutsdir = $(datadir)/photoprint/shortcuts/size
profilingshortcutsdir = $(datadir)/photoprint/shortcuts/profiling

sizeshortcuts_DATA = \
	A4-10x8-1up.preset  Letter-8x6-1up.preset \
	A4-7x5-2up.preset   Letter-10x8-1up.preset \
	A4-8x6-1up.preset   Letter-7x5-2up.preset

profilingshortcuts_DATA = \
	A4Profiling.preset LetterProfiling.preset

EXTRA_DIST = \
	A4-10x8-1up.preset  Letter-8x6-1up.preset \
	A4-7x5-2up.preset   Letter-10x8-1up.preset \
	A4-8x6-1up.preset   Letter-7x5-2up.preset \
	A4Profiling.preset LetterProfiling.preset

